--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@capacitor/android": "5.5.0",
-    "@capacitor/app": "5.0.6",
-    "@capacitor/camera": "^5.0.7",
-    "@capacitor/core": "5.5.0",
-    "@capacitor/filesystem": "5.1.1",
-    "@capacitor/haptics": "5.0.6",
-    "@capacitor/ios": "5.5.0",
-    "@capacitor/keyboard": "5.0.6",
-    "@capacitor/preferences": "^5.0.6",
-    "@capacitor/status-bar": "5.0.6",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/camera": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/filesystem": "^6.0.0",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/ios": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/preferences": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
     "@ionic/pwa-elements": "^3.2.2",
     "@ionic/react": "^8.1.1",
     "@ionic/react-router": "^8.1.1",
@@ -39,7 +39,7 @@
     "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.5.0",
+    "@capacitor/cli": "^6.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
