--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chart.js": "^4.4.2",
     "chartjs-adapter-date-fns": "^3.0.0",
     "ionicons": "^7.4.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
