--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "ionic-datetime-picker": "^1.1.1",
     "ionicons": "^7.4.0",
     "moment": "^2.30.1",
