--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
