--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "chart.js": "^4.4.2",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "dompurify": "^3.1.6",
+    "html-react-parser": "^5.1.12",
     "ionic-datetime-picker": "^1.1.1",
     "ionicons": "^7.4.0",
     "moment": "^2.30.1",
