--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
+<dict><key>NSPhotoLibraryUsageDescription</key>
+<string>We need access to your photo library to allow you to upload and share photos.</string>
+
+<key>NSCameraUsageDescription</key>
+<string>We need access to your camera to take photos and videos.</string>
+
+<key>NSLocationWhenInUseUsageDescription</key>
+<string>We need your location to provide location-based services.</string>
+
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
