--- a/ios/App/App.xcodeproj/xcshareddata/xcschemes/App 1.xcscheme
+++ b/ios/App/App.xcodeproj/xcshareddata/xcschemes/App 1.xcscheme
@@ -74,7 +74,7 @@
       </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug">
+      buildConfiguration = "Release">
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
