--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "test.unit": "vitest",
     "lint": "eslint",
     "ionic:serve": "vite"
-   
   },
   "dependencies": {
     "@capacitor/android": "^6.0.0",
@@ -21,7 +20,7 @@
     "@capacitor/core": "^6.0.0",
     "@capacitor/filesystem": "^6.0.0",
     "@capacitor/haptics": "^6.0.0",
-    "@capacitor/ios": "^6.0.0",
+    "@capacitor/ios": "6.0.0",
     "@capacitor/keyboard": "^6.0.0",
     "@capacitor/network": "^6.0.1",
     "@capacitor/preferences": "^6.0.0",
@@ -35,6 +34,7 @@
     "chart.js": "^4.4.2",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "3.6.0",
     "dompurify": "^3.1.6",
     "html-react-parser": "^5.1.12",
     "ionic-datetime-picker": "^1.1.1",
